--- a/static/main.css
+++ b/static/main.css
@@ -407,3 +407,26 @@ h2.h4 {
     color: var(--ccg-muted);
     margin-bottom: .25rem;
 }
+
+.sidebar-link {
+    display: block;
+    padding: 0.6rem 1rem;
+    color: #adb5bd;
+    text-decoration: none;
+    border-radius: 0.4rem;
+}
+
+.sidebar-link:hover {
+    color: #fff;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.dataTables_wrapper .dataTables_filter input {
+  border-radius: 0.3rem;
+  padding: 0.25rem 0.5rem;
+  margin-left: 0.4rem;
+}
+
+.table > :not(caption) > * > * {
+  vertical-align: middle;
+}
